@@ -158,4 +158,17 @@ public class Foo {
 }
      ]]></code>
     </test-code>
+    <test-code>
+        <description><![CDATA[
+ClassCastException on generic method
+     ]]></description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+public abstract class List<A> implements Iterable<A> {
+  public static <A> F<List<A>, Boolean> isEmpty() {
+    return null;
+  }
+}
+     ]]></code>
+    </test-code>
 </test-data>
